fixed icon white space

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,8 @@ img {
 .icons i {
     color: #008751;
     padding: 1rem;
-    margin-bottom: 15px;
+    margin-bottom: 0.9375rem;
+
 }
 
 
