--- a/css/utilities.css
+++ b/css/utilities.css
@@ -125,7 +125,7 @@
 
 /* Section header */
 .section-header {
-    padding: 30px;
+    padding: 30px 30px 0 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -137,12 +137,11 @@
     font-size: 40px;
     margin: 20px 0;
 }
-.section-header .we-play {
-    margin-bottom: 0;
-}
+
 
 .section-padding {
-    padding: 20px 20px 40px;
+    padding: 1.25rem ;
+    padding-bottom: 0.625rem;
 }
 
 /* Flex grid */
